--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@react-native/metro-config": "^0.81.5",
     "@react-native/typescript-config": "^0.81.5",
     "@types/react": "~19.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "typescript": "~5.9.2"
   },
