--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "main": "index.js",
   "version": "1.0.0",
   "scripts": {
-    "start": "react-native start",
+    "start": "react-native start --reset-cache",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint ."
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
@@ -25,8 +24,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-vision-camera": "^4.5.3",
-    "react-native-worklets": "0.5.1",
-    "expo": "~54.0.25"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.0",
