--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.1.8",
+    "cactus-react-native": "^1.2.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-picker": "^7.1.2",
+    "react-native-nitro-modules": "^0.31.10",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
