--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,17 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Node.js/React Native (keep for legacy)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Expo
+.expo/
+.expo-shared/
+
+# Android build artifacts  
+android/build/
+android/app/build/
