--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   
   # Camera
   camera: ^0.10.5+9
-  permission_handler: ^11.2.0
+  permission_handler: ^12.0.1
   
   # Storage
   shared_preferences: ^2.2.2
@@ -27,8 +27,12 @@ dependencies:
   image_picker: ^1.0.7
   path_provider: ^2.1.1
   
+  # Cactus AI/ML capabilities
+  cactus: ^1.2.0
+  
   # UI
   cupertino_icons: ^1.0.6
+  google_mlkit_text_recognition: ^0.15.0
 
 dev_dependencies:
   flutter_test:
