Add generated plugin registrants for all platforms
- Add Google ML Kit and other plugin registrations for Linux, macOS, Windows
- Update .gitignore to exclude React Native legacy files
- These are auto-generated files needed for multi-platform plugin support

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@ yarn-error.log*
 # Android build artifacts  
 android/build/
 android/app/build/
+
+# React Native legacy files (not used in Flutter)
+app/
+package.json
+setup-env.sh
+expo-env.d.ts
