--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   # UI
   cupertino_icons: ^1.0.6
   google_mlkit_text_recognition: ^0.15.0
+  
+  # HTTP client for API calls
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
